--- a/chrome/components/one_sound.css
+++ b/chrome/components/one_sound.css
@@ -3,10 +3,23 @@
 
 /* Remove unwanted extra tab width */
 
-.tabbrowser-tab {
-    &:is([muted], [soundplaying], [activemedia-blocked]) {
-        #tabbrowser-tabs[orient="horizontal"] &:not([pinned]) {
-            --tab-min-width: unset !important;
+#tabbrowser-arrowscrollbox[orient="horizontal"] {
+
+    &>tab-group {
+        &:not([collapsed]) > .tabbrowser-tab {
+            &:is([muted], [soundplaying], [activemedia-blocked]) {
+                #tabbrowser-tabs[orient="horizontal"] &:not([pinned]) {
+                    min-width: max(var(--tab-min-width-pref, var(--tab-min-width))) !important;
+                }
+            }
+        }
+    }
+    
+    &>.tabbrowser-tab {
+        &:is([muted], [soundplaying], [activemedia-blocked]) {
+            #tabbrowser-tabs[orient="horizontal"] &:not([pinned]) {
+                min-width: max(var(--tab-min-width-pref, var(--tab-min-width))) !important;
+            }
         }
     }
 }
@@ -20,39 +33,7 @@
     }
 }
 
-/* General style for sound button */
-
-.button-background {
-    position: var(--my-position) !important;
-    top: var(--my-top) !important;
-    inset-inline-start: var(--my-inset-inline-start) !important;
-    background-image: var(--my-background-image, initial) !important;
-    background-size: var(--my-background-size) !important;
-    box-shadow: var(--my-box-shadow) !important;
-    opacity: var(--my-opacity) !important;
-    fill: var(--my-fill) !important;
-    outline: var(--my-outline) !important;
-    outline-offset: var(--my-outline-offset) !important;
-    align-items: var(--my-align-items, center) !important;
-}
-
-/* tab on hover, and when it is 'muted' or 'media blocked' */
-.tabbrowser-tab:hover {
-    & .tab-icon-stack:not([crashed]):is([muted],[activemedia-blocked]) {
-        & :is(.tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay) {
-            mask-image: url("../icons/tab_icon_masks.svg#SoundMask") !important;
-        }
-    }
-}
-
-/* In 'pinned' tabs when sound playing */
-.tab-icon-stack[pinned]:not([crashed]):is([soundplaying]) {
-    & :is(.tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay) {
-        mask-image: url("../icons/tab_icon_masks.svg#SoundMask") !important;
-    }
-}
-
-/* Fixed glich when clic play in a muted tab */
+/* Fixed glich when clic mute button */
 
 .tabbrowser-tab {
     --tab-icon-end-margin: 5px !important;
@@ -62,9 +43,48 @@
     }
 }
 
-.tab-audio-button:is([soundplaying],[muted]) {
+/* Hide sound button when tab is pending or loading */
+
+.tabbrowser-tab:is([pending],[busy]):hover .tab-audio-button {
+    opacity: 0 !important;
+}
+
+/* General style for sound button */
+
+.button-background {
+    position: var(--my-position) !important;
+    top: var(--my-top) !important;
+    inset-inline-start: var(--my-inset-inline-start) !important;
+    background-image: var(--my-background-image) !important;
+    background-size: var(--my-background-size) !important;
+    box-shadow: var(--my-box-shadow) !important;
+    opacity: var(--my-opacity) !important;
+    fill: var(--my-fill) !important;
+    outline: var(--my-outline) !important;
+    outline-offset: var(--my-outline-offset) !important;
+    align-items: var(--my-align-items, center) !important;
+}
+
+/* Favicon trimmed on tab 'hover' when it is 'muted' or 'media blocked' */
+.tabbrowser-tab:not([pending]):hover {
+    & .tab-icon-stack:not([crashed]):is([muted],[activemedia-blocked]) {
+        & :is(.tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay) {
+            mask-image: url("../icons/tab_icon_masks.svg#SoundMask") !important;
+        }
+    }
+}
+
+/*  Favicon trimmed in 'pinned' tabs when sound playing */
+.tab-icon-stack[pinned]:not([crashed]):is([soundplaying]) {
+    & :is(.tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay) {
+        mask-image: url("../icons/tab_icon_masks.svg#SoundMask") !important;
+    }
+}
+
+.tab-audio-button:is([soundplaying],[muted],[activemedia-blocked]) {
     --button-size-icon-small: 16px !important;
     --button-min-height-small: var(--button-size-icon-small) !important;
+    --button-border-radius: 50% !important;
     --my-align-items: end !important;
     height: var(--button-min-height-small) !important;
 }
@@ -86,13 +106,12 @@
     &:hover {
         /*--my-outline: 1px solid var(--lwt-tab-text) !important;/**/
         --my-fill: var(--contrast-color) !important;
-
     }
 }
 
 /* Normal tabs - Muted icon */
 
-.tab-audio-button[muted] {
+.tab-audio-button:is([muted],[activemedia-blocked]) {
     --my-position: absolute !important;
     --my-top: calc(var(--tab-height-personal)/2 - 14px) !important;
     --my-inset-inline-start: 14px !important;
@@ -114,6 +133,10 @@
     }
 }
 
+.tab-audio-button:is([activemedia-blocked]) {
+    --my-background-image: url("../icons/blocked.svg") !important;
+}
+
 /* Pinned tabs */
 
 .tab-icon-overlay {
@@ -130,7 +153,7 @@
             list-style-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
             outline: 1px solid var(--general-color) !important;
             outline-offset: -1px !important;
-            box-shadow: inset 0 0 0 1px var(--general-color), 0 0 0 1px var(--contrast-color) !important;
+            box-shadow: inset 0 0 0 1px var(--general-color) !important;
             fill: var(--general-color)  !important;
             inset-inline-end: -8px !important;
             top: -4px !important;
@@ -141,7 +164,7 @@
             }
         }
 
-        &[muted] {
+        &:is([muted],[activemedia-blocked]) {
             list-style-image: url("../icons/paused.svg") !important;
             background-color: transparent !important;
             padding: 4px !important;
@@ -155,14 +178,18 @@
                 list-style-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
             }
         }
+
+        &:is([activemedia-blocked]) {
+            list-style-image: url("../icons/blocked.svg") !important;
+        }
     }
 }
 
 /* _______________ Sound icon for Vertical tabs _______________ */
 
-@media (-moz-bool-pref:"sidebar.verticalTabs") {
+@media -moz-pref("sidebar.verticalTabs") {
 
-    .tab-audio-button:is([soundplaying],[muted]) {
+    .tab-audio-button:is([soundplaying],[muted],[activemedia-blocked]) {
         --button-size-icon-small: 14px !important;
         --button-min-height-small: var(--button-size-icon-small) !important;
         --my-position: absolute !important;
@@ -171,8 +198,8 @@
         --my-background-size: 8px !important;
         --my-outline-offset: -2px !important;
     }
-    
-    .tab-audio-button[soundplaying] {    
+
+    .tab-audio-button[soundplaying] {
         --my-background-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
         --button-background-color-ghost: color-mix(in srgb, var(--contrast-color), transparent) !important;
         --button-background-color-ghost-hover: color-mix(in srgb, var(--contrast-color), transparent) !important;
@@ -181,15 +208,11 @@
         --my-outline: 1px solid var(--general-color) !important;
         --my-box-shadow: inset 0 0 0 1px var(--general-color) !important;
         --my-fill: var(--general-color)  !important;
-        
+
         &:hover {
             --general-color: var(--lwt-tab-text) !important;
             --my-fill: var(--lwt-tab-text) !important;
         }
-    }
-
-    .tab-audio-button[muted] {
-        
     }
 
     /* Hide favicon corner for 'playing' button */
