--- a/chrome/components/one_urlbar-searchbar.css
+++ b/chrome/components/one_urlbar-searchbar.css
@@ -102,7 +102,7 @@ findbar{
 /* favicons */
 
 .urlbarView-row {
-  @media (-moz-bool-pref: "browser.urlbar.richSuggestions.featureGate") {
+  @media -moz-pref("browser.urlbar.richSuggestions.featureGate") {
     &:not([rich-suggestion]), &[rich-suggestion][icon-size="16"] {
       --urlbarView-icon-margin-start: 16px !important;
       --urlbarView-icon-margin-end: 12px !important;/**/
@@ -333,7 +333,7 @@ findbar{
 
 /* Search Engine button */
 
-@media not (-moz-bool-pref: "browser.urlbar.searchModeSwitcher.featureGate") {
+@media not -moz-pref("browser.urlbar.searchModeSwitcher.featureGate") {
     #urlbar-searchmode-switcher:not(:hover,[open]) {
         background-color: transparent !important;
     }
@@ -372,7 +372,7 @@ findbar{
 
 #urlbar-searchmode-switcher,
 #searchmode-switcher-chicklet {
-  @media (-moz-bool-pref: "browser.urlbar.searchModeSwitcher.featureGate") or (-moz-bool-pref: "browser.urlbar.scotchBonnet.enableOverride") {
+  @media -moz-pref("browser.urlbar.searchModeSwitcher.featureGate") or -moz-pref("browser.urlbar.scotchBonnet.enableOverride") {
     #urlbar[searchmode] & {
         display: inline-flex;
         background-color: var(--urlbar-box-bgcolor) !important;
@@ -381,7 +381,7 @@ findbar{
 }
 
 #urlbar-searchmode-switcher:is(:hover,[open]) {
-  @media (-moz-bool-pref: "browser.urlbar.searchModeSwitcher.featureGate") or (-moz-bool-pref: "browser.urlbar.scotchBonnet.enableOverride") {
+  @media -moz-pref("browser.urlbar.searchModeSwitcher.featureGate") or -moz-pref("browser.urlbar.scotchBonnet.enableOverride") {
     #urlbar[searchmode] & {
         display: inline-flex;
         background-color: var(--urlbar-box-hover-bgcolor) !important;
